WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50577
[GTK] WebKitSoupCache fails to load resources when cache contents are externally removed
https://bugs.webkit.org/show_bug.cgi?id=50577
Summary
[GTK] WebKitSoupCache fails to load resources when cache contents are externa...
Sergio Villar Senin
Reported
2010-12-06 11:27:42 PST
The cache silently fails to retrieve resources that are supposedly cached when it cannot create streams for them. That could happen if for example cache files are accidentally removed by any other actor but the cache.
Attachments
Patch
(5.85 KB, patch)
2010-12-06 11:34 PST
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2010-12-06 11:34:35 PST
Created
attachment 75716
[details]
Patch
Dan Winship
Comment 2
2010-12-07 03:30:26 PST
Comment on
attachment 75716
[details]
Patch xan asked me to review this. It looks right to me
WebKit Commit Bot
Comment 3
2010-12-07 19:52:52 PST
The commit-queue encountered the following flaky tests while processing
attachment 75716
[details]
: fast/css/font-face-download-error.html compositing/reflections/animation-inside-reflection.html Please file bugs against the tests. These tests were authored by
simon.fraser@apple.com
and
yuzo@google.com
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4
2010-12-07 20:33:21 PST
Comment on
attachment 75716
[details]
Patch Clearing flags on attachment: 75716 Committed
r73489
: <
http://trac.webkit.org/changeset/73489
>
WebKit Commit Bot
Comment 5
2010-12-07 20:33:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug