2010-12-07  Sergio Villar Senin  <svillar@igalia.com>

Reviewed by Xan Lopez.

        [GTK] WebKitSoupCache fails to load resources when cache contents are externally removed
        https://bugs.webkit.org/show_bug.cgi?id=50577

        Try to download cached resources again if they are no longer
        accesible by the cache.

        * platform/network/soup/cache/soup-request-http.c:
        (send_async_cb):
        (webkit_soup_request_http_send_async):

Canonical link: https://commits.webkit.org/63901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73489 268f45cc-cd09-0410-ab3c-d52691b4dbfc